[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://HUD.gd" type="Script" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 472, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="Main" type="Node"]
script = ExtResource( 3 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.211765, 0.0470588, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="ScoreLabel" type="Label" parent="HUD"]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 5 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 2.0
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_StartButton_pressed"]
[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_MessageTimer_timeout"]
